# AdvectionDiffusionSolver

./: CMakeLists.txt  README.md  build.sh
cmake/: FindTP.cmake
data/: animaiton.py  data.csv
src/: CMakeLists.txt
src/Analysis/: CMakeLists.txt  main.cpp
src/DG/: CMakeLists.txt  main.cpp
src/Explicit/: CMakeLists.txt  main.cpp
src/Implicit/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  initialize.cpp  inputcsv.h  main_Analysis.cpp  main_DG.cpp  main_Explicit.cpp  main_Implicit.cpp  namelist.h  outputcsv.h
